tests/haste_namespaces/web/WebOnly.js
import { foo } from "CommonLib";

foo as string;
foo as empty; // error: string ~> empty

declare export const web: string;
